--- a/src/components/App/app.sass
+++ b/src/components/App/app.sass
@@ -409,6 +409,8 @@ body
 					select
 						height: 50px
 						appearance: none
+						-webkit-appearance: none
+						-moz-appearance: none
 						background: transparent
 
 					&:before
